# chessington-python

./: .gitignore  README.rst  pyproject.toml  test_king.py
chessington/engine/: board.py  data.py  pieces.py
chessington/ui/: __init__.py  colours.py  images.py
tests/: test_board.py  test_chessington.py  test_pieces.py
